Various tweaks and fixes
- Hide bookmarks options on safari and online
- Fixed manual weather not showing city/ccode when changing lang
- Removed islands and territories from ccode list
- Bigger deadzone for links dragging
- Translate "default page" from .trn class
- Fixed & improved settings footer padding on mobile

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -42,7 +42,7 @@
 		min-height: 100dvh;
 
 		&.pushed {
-			transform: translateX(0);
+			transform: none;
 		}
 	}
 
@@ -63,8 +63,12 @@
 		-webkit-overflow-scrolling: touch;
 
 		&.shown {
-			transform: translateX(0) translateY(-75%);
+			transform: translateX(0) translateY(-75vh);
 		}
+	}
+
+	#settings-footer {
+		padding-bottom: 25vh;
 	}
 
 	// Tooltip (?) centered when span wrap
